--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head>
         <meta charset="utf-8" />
         <title> Connect 4 </title>
+        <base data-trunk-public-url/>
     </head>
 </html>
